# wfAI

./: .env.bak  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/adapters/api/routers/: chat.py  commands.py  icons.py  memories.py  sessions.py  settings.py
app/adapters/api/schemas/: chat.py  commands.py  memories.py  sessions.py  settings.py
app/adapters/llm/: llm_client.py  memory.py  openai_compatible.py
app/adapters/mongo/models/: __init__.py  base.py  chat.py  memory.py  persona.py  state.py  user.py
app/adapters/mongo/repositories/: __init__.py  chat.py  persona.py  user.py
app/adapters/qdrant/: initializer.py  memory_repository.py
app/adapters/s3/: repository.py
app/adapters/search/: searxng.py
app/application/commands/: base.py  contract.py  registry.py
app/application/services/: chat.py
app/core/: config.py
app/domain/: exceptions.py
app/domain/entities/: base.py  chat.py  memory.py  persona.py  user.py
app/domain/interfaces/: llm.py  repositories.py  tool.py
app/infrastructure/: bootstrap.py
app/infrastructure/di/: container.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: ChatArea.jsx  ChatComponents.jsx  CommandsModal.jsx  EditSessionModal.jsx  ErrorBoundary.jsx  MemoriesModal.jsx  SettingsModal.jsx  Sidebar.jsx  WaifuIconsModal.jsx
frontend/src/context/: ChatContext.jsx
searxng/: settings.yml
(+34 files in other folders)
