[project]
name = "wfai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]

readme = "README.md"
requires-python =  ">=3.12,<3.14"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "beanie (>=2.0.1,<3.0.0)",
    "openai (>=2.16.0,<3.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "dishka (>=1.7.2,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "boto3 (>=1.34.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
